// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders HintWithIcon without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-r3aouy"
    >
      <span
        class="rcx-box rcx-box--full rcx-tag "
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-eye rcx-icon rcx-css-nbjs1j"
        >
          
        </i>
        <span
          class="rcx-tag__inner"
        >
          This room is read only
        </span>
      </span>
    </div>
  </div>
</body>
`;

exports[`renders HintWithIconAndHelperText without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-r3aouy"
    >
      <span
        class="rcx-box rcx-box--full rcx-tag "
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-pencil rcx-icon rcx-css-nbjs1j"
        >
          ⦏
        </i>
        <span
          class="rcx-tag__inner"
        >
          Editing message
        </span>
      </span>
      <div
        class="rcx-box rcx-box--full rcx-css-1c8uhnw"
      >
        <strong>
          esc
        </strong>
         to cancel · 
        <strong>
          enter
        </strong>
         to save
      </div>
    </div>
  </div>
</body>
`;

exports[`renders HintWithText without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-r3aouy"
    >
      <span
        class="rcx-box rcx-box--full rcx-tag "
      >
        <span
          class="rcx-tag__inner"
        >
          You're sending an unencrypted message
        </span>
      </span>
    </div>
  </div>
</body>
`;
